--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -7,6 +7,7 @@
   "files": [
     "eslint/*.js"
   ],
+  "homepage": "https://github.com/BlueOrgreen/fan-scripts//packages/code",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BlueOrgreen/fan-scripts.git",
