--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fan-scripts/code",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "keywords": [],
   "author": "yunfan",
@@ -13,21 +13,42 @@
     "url": "git+https://github.com/BlueOrgreen/fan-scripts.git",
     "directory": "packages/code"
   },
-  "scripts": {
-      "lint": "eslint \"**/*.js\" --fix"
+  "exports": {
+    ".": {
+      "types": "./dist/cjs/index.d.ts",
+      "import": "./dist/esm/index.mjs",
+      "require": "./dist/cjs/index.js"
+    },
+    "./react": {
+      "types": "./dist/cjs/react.d.ts",
+      "import": "./dist/esm/react.mjs",
+      "require": "./dist/cjs/react.js"
+    },
+    "./typescript": {
+      "types": "./dist/cjs/typescript.d.ts",
+      "import": "./dist/esm/typescript.mjs",
+      "require": "./dist/cjs/typescript.js"
+    },
+    "./prettier": {
+      "types": "./dist/cjs/prettier.d.ts",
+      "import": "./dist/esm/prettier.mjs",
+      "require": "./dist/cjs/prettier.js"
+    }
   },
-    "dependencies": {
+  "scripts": {
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "prepublishOnly": "pnpm run build"
+  },
+  "dependencies": {
+    "eslint": "^8.14.0",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.23",
-    "eslint": "^8.14.0",
-    "react": "^18.0.0",
-    "typescript": "^4.6.3"
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "typescript": "^5.3.3"
   },
   "license": "MIT"
 }
