feat: @fan-scripts/code v1.0.4

--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@fan-scripts/code",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "keywords": [],
   "author": "yunfan",
   "files": [
-    "eslint/*.js"
+    "dist"
   ],
   "homepage": "https://github.com/BlueOrgreen/fan-scripts//packages/code",
   "repository": {
