--- a/packages/code/package.json
+++ b/packages/code/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fan-scripts/code",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "keywords": [],
   "author": "yunfan",
@@ -41,6 +41,7 @@
     "@typescript-eslint/parser": "^5.17.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-unused-imports": "^3.2.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "typescript": "^5.3.3"
