--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ci-publish": "ts-node scripts/publishCI.ts",
     "dev": "turbo run dev",
-    "build": "turbo run build",
+    "build": "pnpm -r run build",
     "lint": "turbo run lint"
   },
   "devDependencies": {
