--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "lint": "turbo run lint"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^18.4.3",
+    "conventional-changelog-cli": "^4.1.0",
+    "cz-conventional-changelog": "^3.3.0",
     "@types/fs-extra": "^9.0.13",
     "@types/minimist": "^1.2.2",
     "@types/node": "^17.0.35",
